fixed th layout issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .logo {
@@ -38,9 +39,9 @@ body{
   width: 100%;
   max-width: 400px;
   box-shadow: 8px 8px 24px 0px #a826aa;
-} */
+} /* Remove the extra asterisk here */
 
- .container > h1{
+.container > h1{
   margin-bottom: 20px;
   color:#160c27;
   font-family: PT Serif, sans-serif;
